--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"bootstrap": "^5.3.2",
 		"cdbreact": "^1.5.18",
+		"express": "^4.20.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-bootstrap": "^2.9.1",
